src/main/java/com/example/copro/global/error/exception/InvalidGroupException.java
package com.example.copro.global.error.exception;

public abstract class InvalidGroupException extends RuntimeException{
    public InvalidGroupException(String message) {
        super(message);
    }
}
